Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -78,12 +78,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
     "greenville_population = None # change None\n",
-    "greenville_population = greeville['Popula'] # 93"
+    "greenville_population = greenville['Population'] # 93"
    ]
   },
   {
