Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -83,7 +83,8 @@
    "outputs": [],
    "source": [
     "greenville_population = None # change None\n",
-    "greenville_population = greenville['Population'] # 93"
+    "greenville_population = greenville['Population'] # 93\n",
+    "print(greenville_population)"
    ]
   },
   {
